--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ venv/
 ENV/
 env/
 .venv/
+.env
 
 # PyInstaller
 *.manifest
@@ -87,6 +88,9 @@ docs/_build/
 # Logs
 logs/
 *.log
+
+#Artifacts
+Artifacts
 
 # System files
 .DS_Store
